[gd_scene load_steps=4 format=3 uid="uid://bvk1y1pcaamys"]

[ext_resource type="Texture2D" uid="uid://w5n47sx1ky7c" path="res://anim/Square.png" id="1_fc7l3"]
[ext_resource type="Script" path="res://script/inimigo.gd" id="2_3t3f7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aiwn1"]
size = Vector2(16, 16)

[node name="Inimigo" type="Sprite2D"]
modulate = Color(0.843137, 0.113725, 0.141176, 1)
texture = ExtResource("1_fc7l3")
script = ExtResource("2_3t3f7")

[node name="hitBox" type="Area2D" parent="." groups=["inimigo"]]

[node name="col" type="CollisionShape2D" parent="hitBox"]
shape = SubResource("RectangleShape2D_aiwn1")

[node name="timer_recuo" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="area_entered" from="hitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="timer_recuo" to="." method="_on_timer_recuo_timeout"]
